avatar fix on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -892,14 +892,24 @@ body.dark .orcamento-wrapper {
 
     .mobile-img {
         display: block;
-        width: 20vw;
+        /* width: 20vw; */
+        /* height: 20vw; */
+        width: 150px;
         height: 150px;
         margin: 0 auto;
-        margin-bottom: 60px;
+        margin-top: -50px;
+        /* margin-bottom: 60px; */
+        border-radius:50%;
+        overflow: hidden;
+        border: 3px solid white ;
+        position: relative;
     }
     .mobile-img img {
         width: 160px;
-        transform: translateY(-60px);
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -25%);
     }
 }
 
@@ -927,11 +937,11 @@ body.dark .orcamento-wrapper {
         margin: 10px auto;
     }
     .mobile-img {
-        margin-bottom: 40px;
+        width: 120px;
+        height: 120px;
     }
     .mobile-img img {
         width: 120px;
-        transform: translateY(-40px);
     }
 }
 
@@ -946,10 +956,11 @@ body.dark .orcamento-wrapper {
         font-size: 35px;
     }
     .mobile-img {
-        margin-bottom: 0;
+        width: 110px;
+        height: 110px;
     }
     .mobile-img img {
-        width: 80px;
+        width: 110px;
     }
 }
 @media (max-width: 500px) {
